--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<section class="banner1">
-   <img class="escola.image" src="banner.png" alt="Banner da Escola">
-</section>
+!DOCTYPE html>
+<html lang=*pt-br*>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-widght, initial-scale=1.0">
+      <title>Home|Nossa Escola</title>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <header class="cabecalho-itens">
+         <img class="cabecalho_imagem" scr="logo_page.png" alt="Logo da P
