--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
    </head>
    <body>
       <header class="cabecalho-itens">
-         <img class="cabecalho_imagem" scr="logo_page.png" alt="Logo da P
+         <img class="cabecalho_imagem" scr="logo_page.png" alt="Logo da Página">
+         <h1 class="titulo_site">Nossa Escola</h1>
+      </div class="sociais">
+         
