--- a/index.html
+++ b/index.html
@@ -11,4 +11,11 @@
          <img class="cabecalho_imagem" scr="logo_page.png" alt="Logo da Página">
          <h1 class="titulo_site">Nossa Escola</h1>
       </div class="sociais">
-         
+         <img class="sociais" scr="whatsapp.png" alt="Logo do Whats da Escola">
+         <img class="sociais" scr="whatsapp.png" alt="Facebook da Escola">
+         <img class="sociais" scr="instagram.png" alt="instagram da Escola">
+      </div>
+  </header>
+  <selection class="banner1">
+     <img class="escola.image" scr="banner.png" alt="Banner da Escola">
+  </selection>
