--- a/index.html
+++ b/index.html
@@ -19,3 +19,9 @@
   <selection class="banner1">
      <img class="escola.image" scr="banner.png" alt="Banner da Escola">
   </selection>
+<setion class="estudante>
+   <h1 class="estudante_titulo">alunos em destaque 2024</h1>
+   <p> </p>
+   <div class="estudantes_todos">
+      <div class="estudantes-div">
+         <img class="estudantes-imagem*
