--- a/index.html
+++ b/index.html
@@ -24,4 +24,11 @@
    <p> </p>
    <div class="estudantes_todos">
       <div class="estudantes-div">
-         <img class="estudantes-imagem*
+         <img class="estudantes-imagem" scr="estudantes_menino_1.png" alt="foto da turma do 1cds do ano de 2023">
+         <h3 class="estudantes-nome">aluno 1</h3>
+         <a href="https://cursos.alura.com.br/dashboard">
+            <p></p>
+            <img class="estudante-icone" scr="site-school.png" alt="link do site da escola"></a>
+            <img class="estudante-icone" scr="instagram.png" alt="link do instagram">
+            <img class="estudante-icone" scr="facebook.png" alt="link do facebook">
+      </div>
