--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
       <header class="cabecalho-itens">
          <img class="cabecalho_imagem" scr="logo_page.png" alt="Logo da Página">
-         <h1 class="titulo_site">Nossa Escola</h1>
+         <h1 class="titulo_site">Nossa Escola</h1"
       </div class="sociais">
          <img class="sociais" scr="whatsapp (2) (1).png" alt="Logo do Whats da Escola">
          <img class="sociais" scr="whatsapp.png" alt="Facebook da Escola">
@@ -27,8 +27,36 @@
          <img class="estudantes-imagem" scr="estudantes_menino_1.png" alt="foto da turma do 1cds do ano de 2023">
          <h3 class="estudantes-nome">aluno 1</h3>
          <a href="https://cursos.alura.com.br/dashboard">
+         <p> </p>
+            <img class="estudante-icone" scr="site_school.png" alt="link do site da escola"></a>
+         <img class="estudante-
             <p></p>
             <img class="estudante-icone" scr="site-school.png" alt="link do site da escola"></a>
             <img class="estudante-icone" scr="instagram.png" alt="link do instagram">
-            <img class="estudante-icone" scr="facebook.png" alt="link do facebook">
+            <img class="estudante-icone" scr="facebook.png" alt="link do facebook">ffoto
       </div>
+   </div>
+</setion>
+      <section class="estudante">
+         <div class="estudantes_todos">
+            <div class="estudante-div">
+            <img class="estudante-imagem" src="estudante_menina_1.png" alt="foto da turma do 1cds do ano de 2023">
+               <h3 class="estudante-nome">aluno 1 </h3>
+               <a href="https://cursos.alura.com.br/dashboard">
+                  <p></p>
+                  <img class="estudante-icone" src="site_school.png" alt="link do site da escola"></a>
+                  <img class="estudante-icone" src="instagram.png" alt="link do instagram">
+                  <img class="estudante-icone" src="facebook.png" alt="link do facebook">
+            </div>
+            <div class="estudante-div">
+               <img class="estudante-imagem'src="estudante_menina_1.png"
+               alt="foto da turma do 1cds do ano 2023">
+               <h3 class="estudante-nome">aluno 6</h3>
+               <a href="https://cursos.alura.com.br/dashboard">
+                  <p></p>
+                  <img class="estudante-icone" src="site_school.png" alt="link do site da escola"></a>
+                  <img class="estudante-icone" src="instagram.png" alt="link do instagram">
+                  v>
+            </div>
+         </div>
+      </section>
