--- a/index.html
+++ b/index.html
@@ -1,62 +1,170 @@
-!DOCTYPE html>
-<html lang=*pt-br*>
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-widght, initial-scale=1.0">
-      <title>Home|Nossa Escola</title>
-      <link rel="stylesheet" href="style.css">
-   </head>
-   <body>
-      <header class="cabecalho-itens">
-         <img class="cabecalho_imagem" scr="logo_page.png" alt="Logo da Página">
-         <h1 class="titulo_site">Nossa Escola</h1"
-      </div class="sociais">
-         <img class="sociais" scr="whatsapp (2) (1).png" alt="Logo do Whats da Escola">
-         <img class="sociais" scr="whatsapp.png" alt="Facebook da Escola">
-         <img class="sociais" scr="instagram.png" alt="instagram da Escola">
-      </div>
-  </header>
-  <selection class="banner1">
-     <img class="escola.image" scr="banner.png" alt="Banner da Escola">
-  </selection>
-<setion class="estudante>
-   <h1 class="estudante_titulo">alunos em destaque 2024</h1>
-   <p> </p>
-   <div class="estudantes_todos">
-      <div class="estudantes-div">
-         <img class="estudantes-imagem" scr="estudantes_menino_1.png" alt="foto da turma do 1cds do ano de 2023">
-         <h3 class="estudantes-nome">aluno 1</h3>
-         <a href="https://cursos.alura.com.br/dashboard">
-         <p> </p>
-            <img class="estudante-icone" scr="site_school.png" alt="link do site da escola"></a>
-         <img class="estudante-
-            <p></p>
-            <img class="estudante-icone" scr="site-school.png" alt="link do site da escola"></a>
-            <img class="estudante-icone" scr="instagram.png" alt="link do instagram">
-            <img class="estudante-icone" scr="facebook.png" alt="link do facebook">ffoto
-      </div>
-   </div>
-</setion>
-      <section class="estudante">
-         <div class="estudantes_todos">
-            <div class="estudante-div">
-            <img class="estudante-imagem" src="estudante_menina_1.png" alt="foto da turma do 1cds do ano de 2023">
-               <h3 class="estudante-nome">aluno 1 </h3>
-               <a href="https://cursos.alura.com.br/dashboard">
-                  <p></p>
-                  <img class="estudante-icone" src="site_school.png" alt="link do site da escola"></a>
-                  <img class="estudante-icone" src="instagram.png" alt="link do instagram">
-                  <img class="estudante-icone" src="facebook.png" alt="link do facebook">
-            </div>
-            <div class="estudante-div">
-               <img class="estudante-imagem'src="estudante_menina_1.png"
-               alt="foto da turma do 1cds do ano 2023">
-               <h3 class="estudante-nome">aluno 6</h3>
-               <a href="https://cursos.alura.com.br/dashboard">
-                  <p></p>
-                  <img class="estudante-icone" src="site_school.png" alt="link do site da escola"></a>
-                  <img class="estudante-icone" src="instagram.png" alt="link do instagram">
-                  v>
-            </div>
-         </div>
-      </section>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initialscale=1.0">
+<title>Home | Nossa Escola</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <body>
+<!--header é a parte do cabeçalho do site, é o topo da página-->
+<header class="cabecalho-itens">
+<img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo da
+Página">
+<h1 class="titulo_site">Nossa Escola</h1>
+<div class="sociais">
+<img class="sociais" src="whatsapp.png" alt="Logo do Whats da Escola">
+<img class="sociais" src="facebook.png" alt="Facebook da Escola">
+<img class="sociais" src="instagram.png" alt="instagram da Escola">
+</div>
+</header> 
+
+  <!--Seção banner 1 é a parte do paragrafo 1 da página-->
+<section class="banner1">
+<img class="escola.image" src="paragrafo_1_banner.jpg" alt="Banner da Escola">
+</section>
+
+  <!--Seção estudantes é a parte do paragrafo 2 da página-->
+<section class="estudante">
+<h1 class="estudante_titulo">Alunos em destaque 2025</h1>
+<p> </p>
+<div class="estudantes_todos">
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 1</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
+escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 2</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
+escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 3</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
+escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 4</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
+escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 5</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
+escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 6</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+</div>
+</section>
+
+<!--Seção estudantes é a parte do paragrafo 3 da página-->
+<section class="estudante">
+<div class="estudantes_todos">
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 1</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 2</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 3</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 4</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menina.png" alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 5</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menina.png"
+alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+<h3 class="estudante-nome">Aluno 6</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
+</div>
+</section>
+
+<footer class="escola">
+<img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo
+da Escola">
+<h2 class="escola-título">Mais informações entre em contato<a
+class="link" href="https://wa.me/5541999999999"> 41 9.9999-9999
+</a></h2>
+<p></p>
+<p>©2025 | Curso de ADS | Profº Antonio Carlos | Todos os Direitos Reservados.
+Política de Privacidade | Proteção de dados | Encarregado de dados</p>
+<p> </p>
+</footer>
+</body>
+</html>
