--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ escola"></a>
 </div>
 <div class="estudante-div">
 <img class="estudante-imagem" src="estudante_menina.png"
-alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
+alt="Foto dos alunos da Turma 1cds de 2023">
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
@@ -159,10 +159,10 @@ alt="Foto dos alunos da Turma Desenvolvimento de Sistemas">
 <img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo
 da Escola">
 <h2 class="escola-título">Mais informações entre em contato<a
-class="link" href="https://wa.me/5541999999999"> 41 9.9999-9999
+class="link" href="https://wa.me/5541999999999"> 41 9.995694049
 </a></h2>
 <p></p>
-<p>©2025 | Curso de ADS | Profº Antonio Carlos | Todos os Direitos Reservados.
+<p>©2025 | Curso de ADS | maria gabrielly | Todos os Direitos Reservados.
 Política de Privacidade | Proteção de dados | Encarregado de dados</p>
 <p> </p>
 </footer>
