--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ alt="Foto dos alunos da Turma 1cds de 2023">
 <img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo
 da Escola">
 <h2 class="escola-título">Mais informações entre em contato<a
-class="link" href="https://wa.me/5541999999999"> 41 9.995694049
+class="link" href="https://wa.me/5541999999999"> 41 9.99569-4049
 </a></h2>
 <p></p>
-<p>©2025 | Curso de ADS | maria gabrielly | Todos os Direitos Reservados.
+<p>©2025 | Curso de ADS | Maria Gabrielly | Todos os Direitos Reservados.
 Política de Privacidade | Proteção de dados | Encarregado de dados</p>
 <p> </p>
 </footer>
